Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34789

Producer should send Mutation instead of Commit if prepare deduped in disk snapshot [ETA 2019/7/5]

    XMLWordPrintable

Details

    • Triaged
    • No
    • KV-Engine Mad-Hatter Beta

    Description

      Currently we will only send a mutation instead of a prepare if the prepare should have come before the first seqno sent (and is greater than the stream start seqno).

      Attachments

        Activity

          People

            ben.huddleston Ben Huddleston
            ben.huddleston Ben Huddleston
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty